*) Bugfix for layout problem with hint boxes    See: http://www.yacy-forum.de/viewtopic.php?p=35316
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@3687 6c8d7289-2bf4-0310-a012-ef5d649a1542

--- a/htroot/env/base.css
+++ b/htroot/env/base.css
@@ -533,6 +533,14 @@ form dt, dl.pairs dt {
   text-align:right;
 }
 
+dt.hintIcon {
+	float:left;
+}
+
+dd.hint {
+	padding-bottom: 10px;
+}
+
 /*----------
 <form>
 */
